--- a/HowToDesginProgram/230130_목차.md
+++ b/HowToDesginProgram/230130_목차.md
@@ -30,67 +30,94 @@
   - 넌 이제 개발자야
   - 속았지
   
-1. 고정된 크기의 데이타
-  a. 산수
-    - 숫자에 대한 산수
-    - 문자열에 대한 산수
-    - 합쳐볼까
-    - 이미지에 대한 산수
-    - 참거짓에 대한 산수
-    - 참거짓이랑 합쳐볼까
-    - 정의: 당신의 데이터를 안다는 것(맞나 모르겠음. 나중에 읽어보고 고칠것)
+A. 고정된 크기의 데이타
+
+a. 산수
+  - 숫자에 대한 산수
+  - 문자열에 대한 산수
+  - 합쳐볼까
+  - 이미지에 대한 산수
+  - 참거짓에 대한 산수
+  - 참거짓이랑 합쳐볼까
+  - 정의: 당신의 데이터를 안다는 것(맞나 모르겠음. 나중에 읽어보고 고칠것)
     
-  b. 함수와 프로그램
-    - 함수
-    - 컴퓨팅
-    - 함수합성
-    - 전역상수
-    - 프로그램
+b. 함수와 프로그램
+  - 함수
+  - 컴퓨팅
+  - 함수합성
+  - 전역상수
+  - 프로그램
     
-  c. 어떻게 프로그램을 디자인할까
-    - 함수 설계
-    - 직접쳐보기: 함수
-    - 도메인 지식
-    - 함수에서 프로그램으로
-    - 테스트중에
-    - 세계적인 프로그램 설계
-    - 가생애완동물세계? (직역했는데 먼소린지 모르겠음)
+c. 어떻게 프로그램을 디자인할까
+  - 함수 설계
+  - 직접쳐보기: 함수
+  - 도메인 지식
+  - 함수에서 프로그램으로
+  - 테스트중에
+  - 세계적인 프로그램 설계
+  - 가생애완동물세계? (직역했는데 먼소린지 모르겠음)
     
-  d. 인터벌, 열거형, 명세화
-    - 조건으로 개발
-    - 상태에 따라 계산
-    - 열거형
-    - 인터벌
-    - 명세화
-    - 명세화로 설계
-    - 유한상태세계 (이것도 먼소린지 모르겠음)
+d. 인터벌, 열거형, 명세화
+  - 조건으로 개발
+  - 상태에 따라 계산
+  - 열거형
+  - 인터벌
+  - 명세화
+  - 명세화로 설계
+  - 유한상태세계 (이것도 먼소린지 모르겠음)
+  
+e. 구조체 추가하기
+  - 위치에서 기둥 구조체로(파파고의 힘을 빌렸는데 posn이 먼지 모르겠음.)
+  - 기둥으로 계산(먼가 이상함)
+  - 기둥으로 프로그래밍(점점 이상해짐. 위친가? 위치에서 위치 구조? 일단 나중에...)
+  - 구조체 타입 정의
+  - 구조체로 계산
+  - 구조체로 프로그래밍
+  - 데이타의 우주
+  - 구조체로 디자인
+  - 세상 속에 구조체
+  - 그래피컬한 에디터
+  - 더 많은 가상 애완동물(이게 맞나)
     
-  e. 구조체 추가하기
-    - 위치에서 기둥 구조체로(파파고의 힘을 빌렸는데 posn이 먼지 모르겠음.)
-    - 기둥으로 계산(먼가 이상함)
-    - 기둥으로 프로그래밍(점점 이상해짐. 위친가? 위치에서 위치 구조? 일단 나중에...)
-    - 구조체 타입 정의
-    - 구조체로 계산
-    - 구조체로 프로그래밍
-    - 데이타의 우주
-    - 구조체로 디자인
-    - 세상 속에 구조체
-    - 그래피컬한 에디터
-    - 더 많은 가상 애완동물(이게 맞나)
-    
-  f. 명세화와 구조체
-    - 다시, 명세화로 설계하기
-    - 세상을 합쳐볼까
-    - 인풋 에러들
-    - 세상을 점검해볼까
-    - Equality Predicates(직역하면 더 이해가 안갈 것 같아서 그냥 써놓음. 타입 간의 동등성을 이야기하려는 게 아닐까?)
-    
-  g. 정리
+f. 명세화와 구조체
+  - 다시, 명세화로 설계하기
+  - 세상을 합쳐볼까
+  - 인풋 에러들
+  - 세상을 점검해볼까
+  - Equality Predicates(직역하면 더 이해가 안갈 것 같아서 그냥 써놓음. 타입 간의 동등성을 이야기하려는 게 아닐까?)
+  
+g. 정리
   
 
-A. 간주곡1. 학생언어 시작해보기
+I. 간주곡1. 학생언어 시작해보기
 
-2. 물좀
+B. 임의의 큰 데이타
+
+a. 리스트
+  - 리스트 만들기
+  - '()가 뭐고, cons가 뭘까
+  - 리스트로 개발하기
+  - 리스트로 컴퓨팅하기
+
+b. 자기참조 데이타 정의를 통한 디자인(말이 길다~~ 사짜인가~)
+  - 직접쳐보기: 리스트
+  - 비어있지 않은 리스트
+  - 자연적인 숫자들
+  - 러시아인형들(?)
+  - 리스트와 세상
+  - 리스트와 집합에 대한 조언
+
+c. 리스트 한걸음더
+  - 리스트를 제공하는 함수
+  - 리스트 속의 구조체
+  - 리스트 속의 리스트, 파일
+  - 그래피컬한 에디터, 재방문
+
+d. 합성에 의한 디자인
+  - list 함수
+  - 함수합성
+  - 재귀하는 지원함수(?)
+  - 일반화하는 지원함수(?)
     
     
     
