--- a/HowToDesginProgram/230130_목차.md
+++ b/HowToDesginProgram/230130_목차.md
@@ -119,9 +119,96 @@ d. 합성에 의한 디자인
   - 재귀하는 지원함수(?)
   - 일반화하는 지원함수(?)
     
+f. 프로젝트: 리스트
+  - 현실세상데이타: 딕셔너리(사전)
+  - 현실세상데이타: 아이튠즈
+  - 문자게임, 그려지는 합성(?)
+  - 문자게임, 문제의 심장
+  - 지렁이 밥주기
+  - 간단한 테트리스
+  - 우주전쟁
+  - 유한상태머신(이거랑 튜링머신이랑 같이 얘기나왔던 거 같은데)
+
+g. 정리
+
+II. 간주곡: 인용, 인용취소
+
+C. 추상화
+
+a. 어디에나 있는 유사성
+  - 함수 속의 유사성
+  - 다른 유사성
+  - 데이타 정의 속 유사성
+  - 함수는 값이다
+  - 함수로 계산하기
+
+b. 추상화 디자인하기
+  - 예시로부터 추상화
+  - 서명 속 유사성
+  - 간단한 제어점
+  - 견본으로부터 추상화
+
+c. 추상화 하기
+  - 실존하는 추상화
+  - 지역적 정의
+  - 지역적 정의는 표현력을 추가한다
+  - local로 컴퓨팅하기
+  - 예시와 함께 추상화 하기
+  - 추상화로 디자인
+  - 직접해보기: 추상화
+  - 프로젝트: 추상화
+
+d. 이름없는 함수
+  - 람다에서 함수
+  - 람다로 컴퓨팅
+  - 람다로 추상화
+  - 람다로 명시? 지정?
+  - 람다로 다시 표현하기
+
+e. 요약
+
+III. 간주곡3. 스코프와 추상화
+
+D. 뒤얽힌 데이타
+
+a. S-표현의 시
+  - 트리
+  - 숲
+  - S-표현
+  - 뒤얽힌 데이타로 디자인
+  - 프로젝트: BSTs
+  - 함수 간소화
+
+b. 반복적인 개선
+  - 데이터 분석
+  - 데이타 정의 개선
+  - 함수 개선
+  
+c. 통역사 개선(?)
+  - 표현 통역
+  - 변수 통역
+  - 함수 통역
+  - 모든 것 통역
     
-    
-    
-    
+d. 프로젝트: XML 거래? XML 시장?
+  - S-표현의 XML
+  - XML 열거형 렌더링하기
+  - 도메인 특화 언어
+  - XML 읽기
+
+e. 동시작업
+  - 동시에 두 개의 리스트 작업하기: 첫번째 케이스
+  - 동시에 두 개의 리스트 작업하기: 두번째 케이스
+  - 동시에 두 개의 리스트 작업하기: 세번째 케이스
+  - 함수 간소화
+  - 두 개의 복잡한 인풋을 쓰는 함수 디자인
+  - 직접해보기: 두개의 인풋
+  - 프로젝트: 데이타베이스
+
+f. 정리
+
+IV. 간주곡4. 수의 성질
+
+E. 생성적 재귀
     
 
