--- a/HowToDesginProgram/230130_목차.md
+++ b/HowToDesginProgram/230130_목차.md
@@ -163,7 +163,7 @@ d. 이름없는 함수
   - 람다로 컴퓨팅
   - 람다로 추상화
   - 람다로 명시? 지정?
-  - 람다로 다시 표현하기
+  - 람다로 대표하기
 
 e. 요약
 
@@ -210,5 +210,57 @@ f. 정리
 IV. 간주곡4. 수의 성질
 
 E. 생성적 재귀
-    
 
+a. 비표준재귀
+  - 구조체없는 재귀
+  - 구조체를 무시하는 재귀
+
+b. 알고리즘 디자인하기
+  - 디자인 레시피 수용하기
+  - 종료
+  - 구조적 vs 생성적 재귀
+  - 선택하기
+
+c. 주제의 변화? 다양성?
+  - 프랙탈, 첫입
+  - 이진탐색
+  - 파싱 훑어보기
+
+d. 수학적 예시
+  - 뉴턴의 메소드
+  - 수의 통합? 적분?
+  - 프로젝트: 가우스 소거법
+
+e. 되짚는 알고리즘
+  - 그래프 탐색
+  - 프로젝트: 백트랙킹
+
+V. 간주곡5. 계산비용
+
+F. 누산기
+
+a. 지식의 손실
+  - 구조적 작업의 문제
+  - 생성적 재귀의 문제
+
+b. 누산기 스타일 함수 디자인(reduce?)
+  - 누산기의 필요 인지
+  - 누산기 추가
+  - 누산기 스타일로 함수 변경하기
+  - 그래피컬 에디터, 마우스와
+
+c. 누산기의 사용처, 한걸음더
+  - 누산기와 트리
+  - 누산기로 데이터 대표하기
+  - 결과로서의 누산기
+
+d. 정리
+
+- 에필로그: 앞으로
+  - 컴퓨팅
+  - 프로그램 디자인
+  - 앞으로, 개발자와 컴퓨터 과학자
+  - 앞으로, 그밖의 모든 사람들
+
+
+다 읽으면 영어 좀 늘을듯...
