--- a/HowToDesginProgram/목차.md
+++ b/HowToDesginProgram/목차.md
@@ -14,7 +14,7 @@
 나중에 읽으면서 마크다운으로 링크걸면 딱일듯
 
 
-- 들어가기에 앞서
+- [들어가기에 앞서](./들어가기에_앞서/0_본문.md)
   - 계획적인 프로그램 디자인
   - DrRacket과 교육용 언어들 (DrRacket 얘도 프로그래밍 언어인듯? 먼지 모르겠어서 추후에 보강 필요)
   - 기술과 전송? 번역? 번역일듯
