--- a/HowToDesginProgram/들어가기에_앞서/0_본문.md
+++ b/HowToDesginProgram/들어가기에_앞서/0_본문.md
@@ -14,3 +14,49 @@
  
  
  
+---
+
+### 체계적인 프로그램 디자인
+
+ 프로그램은 많은 코드 블록을 포함하는데, 이는 인풋을 받고 아웃풋을 내고, 또 이 둘의 간극을 이어주는 내용이 되겠다. 다들 대수학을 접하기도 하고, 가장 간단한 프로그램이 곧 함수이므로, 우리는 앞서 이야기한 블록들을 함수로 바라보고 사용할 것이다. 중요한 건 어떤 함수가 필요한지, 어떻게 함수들을 연결할 것인지, 함수를 재료로 어떻게 앱을 만들지 아는 것이다.
+
+ 이러한 맥락에서 체계적인 프로그램 디자인이란, 두 개의 컨셉(디자인 레시피와 점진적 개선)이 합쳐진 것이다.
+
+ **디자인 레시피란** 함수 레벨에서 프로그램 레벨까지 반영된다. 이는 공통된 디자인 과정을 갖는데, 디자인 과정은 총 6개의 스탭(피규어1)으로 이루어져있다.
+ 
+  1. 데이터를 분석하고 정의할 것
+  2. Signature, Purpose statement, Header(이건 머 어케 번역해야할지 모르겠네. 대충 함수가 무엇을 계산하는지, 뭘 사용하고 뭘 만드는지 정의하고 사용해보라는 것)
+  3. 함수의 목적을 설명하는 예시를 들어보기
+  4. 함수의 틀을 만들기(내부에서 사용하는 데이터들을, 함수 바깥으로 옮겨보기. 의존성을 주입받도록)
+  5. 함수 정의(4에서 빠진 틀을 마감치기)
+  6. 테스트
+ 
+ 이러한 과정을 인지하고 있으면 초심자에게 도움을 주기 쉽다. 또 그들 스스로 문제를 바로잡을 수 있도록 한다.
+ 
+ **점진적 개선이란** 이슈가 다면적이고 복잡하다는 걸 가리킨다. 모든 걸 한번에 제대로 하기란 어렵다. 과학자가 어떤 이론에 맞도록 모델을 정의하고, 틀리고, 수정하기를 반복해나가듯이, 개발하는 것이다. 일단 핵심적인 걸 해결한 뒤에 부차적인 건 나중에 차근차근...
+
+
+---
+
+### DrRacket와 
+
+ Racket이라는 프로그래밍 언어가 있는데, 이걸 기반으로 DrRacket을 만들었고 이 책에선 이걸 쓸 거야. 상용언어를 쓰자니 공부에 적합하지가 않은데, 언어를 안쓰자니 피아니스트가 피아노를 안치고 피아니스트가 되는 것처럼 말이 안되더라.
+ Racket은 교육용으로 만들었던 건데 잘만들어서 상용화가 됬고, 특히 초심자들을 위해서 DrRacket을 만들었어. 아무튼 잘만들었고 다른 언어로 확장해나가기도 좋으니까 열심히 해라
+ 
+---
+
+### 다른 분야로 옮겨가는 스킬들
+
+ 이 책에서 배우는 디자인 기술들은 두가지 방향으로 옮겨간다. 일단 당연히, 프로그램 디자인을 배우면 프로그램에 적용이 될 거다. 앞서 이야기한 디자인 레시피에서의 피규어1은 보통 어떤 언어에서도 사용가능하다. 언어나 문제를 떠나서 이러한 프로세르를 적용하는 게 여러 형태가 있을 것이다. 다만, 만약 설계가 부차적인 것이 되면 그 대가를 많은 곳에서 치러야 한다.
+ 어쨌거나 두가지 방향이 뭐냐면, 하나는 수학적 사고력이고(특히 수학과 기하), 하나는 글을 읽고 쓰는 능력이다. 왜 그런지 피규어1을 근거로 다시 논리적으로 궁시렁궁시렁~ 
+ 
+---
+
+### 이 책과 내용들
+
+ 이 책은 프로그램 디자인 미경험자에게 프로그램 디자인이 무엇인지 소개하기 위한 것이다. 동시에 상징적인 관점의 계산, 프로그램이 데이타가 어떻게 동작하도록 하는지를 설명할 것이다.
+ 
+ 그뒤에 각 파트의 내용 주절주절~~ 여기부터 읽어야함 25p
+
+
+
