--- a/HowToDesginProgram/목차.md
+++ b/HowToDesginProgram/목차.md
@@ -15,10 +15,10 @@
 
 
 - [들어가기에 앞서](./들어가기에_앞서/0_본문.md)
-  - 계획적인 프로그램 디자인
-  - DrRacket과 교육용 언어들 (DrRacket 얘도 프로그래밍 언어인듯? 먼지 모르겠어서 추후에 보강 필요)
-  - 기술과 전송? 번역? 번역일듯
-  - 이 책과 이 책의 파트들
+  - [체계적인 프로그램 디자인](./들어가기에_앞서/0_본문.md#체계적인-프로그램-디자인)
+  - [DrRacket과 교육용 언어들](./들어가기에_앞서/0_본문.md#drracket과-교육용-언어들)
+  - [다른 분야로 옮겨가는 스킬들](./들어가기에_앞서/0_본문.md#다른-분야로-옮겨가는-스킬들)
+  - [이 책과 내용들](./들어가기에_앞서/0_본문.md#이-책과-)
   - 차이점들
 
 ---
