--- a/HowToDesginProgram/목차.md
+++ b/HowToDesginProgram/목차.md
@@ -18,7 +18,7 @@
   - [체계적인 프로그램 디자인](./들어가기에_앞서/0_본문.md#체계적인-프로그램-디자인)
   - [DrRacket과 교육용 언어들](./들어가기에_앞서/0_본문.md#drracket과-교육용-언어들)
   - [다른 분야로 옮겨가는 스킬들](./들어가기에_앞서/0_본문.md#다른-분야로-옮겨가는-스킬들)
-  - [이 책과 내용들](./들어가기에_앞서/0_본문.md#이-책과-)
+  - [이 책과 내용들](./들어가기에_앞서/0_본문.md#이-책과-내용들)
   - 차이점들
 
 ---
