--- a/HowToDesginProgram/들어가기에_앞서/0_본문.md
+++ b/HowToDesginProgram/들어가기에_앞서/0_본문.md
@@ -54,9 +54,62 @@
 
 ### 이 책과 내용들
 
- 이 책은 프로그램 디자인 미경험자에게 프로그램 디자인이 무엇인지 소개하기 위한 것이다. 동시에 상징적인 관점의 계산, 프로그램이 데이타가 어떻게 동작하도록 하는지를 설명할 것이다.
+ 이 책은 프로그램 디자인 미경험자에게 프로그램 디자인이 무엇인지 소개하기 위한 것이다. 동시에 상징적인 관점의 계산, 프로그램이 데이타가 어떻게 동작하도록 하는지를 설명할 것이다. 러프하게 말하면 이 동작(메소드)은 초등학교 중학교에서 배우는 산수와 대수를 일반화한 거다.
  
- 그뒤에 각 파트의 내용 주절주절~~ 여기부터 읽어야함 25p
+ 이 책은 5개의 간주곡으로 구분되는 6개의 파트와, 프롤로그와 에필로그로 구성되어 있다. 메이저 파트는 프로그램 설계에 집중할 거고 간주곡은 개발역학과 계산과 같은 부차적인 것에 대해 소개한다.
+ 
+ 프롤로그는 평범한 개발을 퀵하게 소개한다. 이 파트의 목적은 왜 평범한 개발이 잘못되었음을 알리고, 어떻게 체계적인 설계와 점진적 접근이 초보자들이 보통 겪는 공포심을 제거해나가는지 알려주는 것이다.
+ 
+ 파트1은 간단한 예시로 체계적인 설계의 가장 근본적인 것들을 대부분 다룰 거다. 핵심은 설계자들은 프로그램이 쓰고 만드는 데이터에 대해 대략적으로 알고있다는 거다. 따라서 우리는 숫자, 이미지와 같은 원시적 데이터에서 인터벌, 열거형, 구조체 등과 이러한 것들의 조합까지 새로운 방법으로, 또 점진적으로 소개해나갈 거다.
+ 
+ 간주곡1은 DrRacket에 대해 소개할 거다
+ 
+ 파트2는 파트1을 확장해서 랜덤하고, 거대한 데이터처럼 재밌고 유용한 데이터를 다룰 거다. 파트1에서 발생하던 문제가 왜 발생했는지를 알려줄 거고, 이를 바탕으로 데이터를 어떻게 체계적으로 설계할 것인지 이야기할 거다.
+ 
+ 간주곡2는 인용과 반인용이라고 하는, 많은 데이터를 간결하고 강력하게 쓸 수 있는 표기법에 대해 이야기할 거다. 
+ 
+ 파트3는 파트2의 많은 함수가 비슷하게 보인다는 걸 인정한다. 많은 프로그래밍언어가 이러한 것을 강제하지 않고, 오히려 이러한 중복을 제거할 수 있는 방법을 제공한다. 이걸 추상화라 하는데 여기선 추상화를 이야기할 거다.
+ 
+ 간주곡3은 2개의 역할을 한다. 한쪽에선 어휘적 범위(맥락)에 대해 이야기할 거고 다른 한쪽에선 for-loop에 대해 이야기할 거다
+ 
+ 파트4는 파트2를 일반화하여 전형적인 디자인 컨셉을 통한 점진적 개선에 대해 이야기를 할 거다
+ 
+ 간주곡4는 왜 소숫점들 가지는 숫자들이 언어마다 이상한지 설명할 거다
+ 
+ 파트5는 새로운 설계 원칙을 추가한다. 구조적 설계와 추상화가 개발자들이 마주하는 대다수의 문제에 충분함에도, 이것들은 프로그램을 불충분하게 유능하게 만들어버린다. 너무 많은 시간이나 에너지를 필요로 하거나는 식으로. 따라서 컴퓨터 과학자들은 프로그램을 특별한 통찰로부터 이익을 얻은, 구조적 설계에서 문제중심으로 바꾼다. 여기선 간단한 프로그램에서 어떻게 큰 클래스를 설계하는지 보여줄 거다.
+ 
+ 간주곡5는 컴퓨터 과학자들이 성능에 대해 어떻게 생각하는지 파트5에서 예시를 들어 설명할 거다.
+ 
+ 파트6은 설계자들의 마지막 트릭을 추가할 건데, 뭐냐면 누산기다. 러프하게 말하면 누산기는 메모리를 함수에 추가하는 거다.
+ 
+ 에필로그는 평가이면서, 다음은 무엇을 목표로 삼을지에 대한 내용이다.
+ 
+ 각각의 독자들은 책의 첫 페이지부터 마지막 페이지까지, 이 책을 통해 작업을 해야 한다. 작업을 한다고 이야기했는데, 진짜로 독자들은 문제를 다 풀어야 하고, 힘들면 최소한 어떻게 푸는지 알아야 한다.
+ 
+ (이후 그림, 피규어2을 통해 독자들을 무얼하는지 네비게이션 해줌. 또 학생들의 수준에 맞게 교수자들이 어떤 걸 읽으면 좋은지도)
+ 
+ 많은 샘플 문제가 반복되는데, 점진적 개선에 대한 동기부여를 위함이다.
+ 
+ ---
+ 
+ ### 달라진 점
+ 
+ 앞서 출판되었던 버전과 달라진 점을 소개... 안궁금함
+ 
+ ---
+ 
+ ### 초판을 출판했을 때의 감사인사
+ 
+이것도 안궁금함
 
+---
 
+여기까지 들어가기에 앞서... 이것만 20페이지정도 되는데 좀 너무했단 생각이 든다.
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 
