--- a/HowToDesginProgram/목차.md
+++ b/HowToDesginProgram/목차.md
@@ -14,11 +14,11 @@
 나중에 읽으면서 마크다운으로 링크걸면 딱일듯
 
 
-- [들어가기에 앞서](./들어가기에_앞서/0_본문.md)
-  - [체계적인 프로그램 디자인](./들어가기에_앞서/0_본문.md#체계적인-프로그램-디자인)
-  - [DrRacket과 교육용 언어들](./들어가기에_앞서/0_본문.md#drracket과-교육용-언어들)
-  - [다른 분야로 옮겨가는 스킬들](./들어가기에_앞서/0_본문.md#다른-분야로-옮겨가는-스킬들)
-  - [이 책과 내용들](./들어가기에_앞서/0_본문.md#이-책과-내용들)
+- [들어가기에 앞서](./0_들어가기에_앞서.md)
+  - [체계적인 프로그램 디자인](./0_들어가기에_앞서.md#체계적인-프로그램-디자인)
+  - [DrRacket과 교육용 언어들](./0_들어가기에_앞서.md#drracket과-교육용-언어들)
+  - [다른 분야로 옮겨가는 스킬들](./0_들어가기에_앞서.md#다른-분야로-옮겨가는-스킬들)
+  - [이 책과 내용들](./0_들어가기에_앞서.md#이-책과-내용들)
 
 ---
 
