--- a/HowToDesginProgram/0_들어가기에_앞서.md
+++ b/HowToDesginProgram/0_들어가기에_앞서.md
@@ -40,8 +40,8 @@
 
 ### DrRacket과 교육용 언어들 
 
- Racket이라는 프로그래밍 언어가 있는데, 이걸 기반으로 DrRacket을 만들었고 이 책에선 이걸 쓸 거야. 상용언어를 쓰자니 공부에 적합하지가 않은데, 언어를 안쓰자니 피아니스트가 피아노를 안치고 피아니스트가 되는 것처럼 말이 안되더라.
- Racket은 교육용으로 만들었던 건데 잘만들어서 상용화가 됬고, 특히 초심자들을 위해서 DrRacket을 만들었어. 아무튼 잘만들었고 다른 언어로 확장해나가기도 좋으니까 열심히 해라
+ Racket이라는 프로그래밍 언어가 있는데, 이걸 사용하기 위한 DrRacket이라는 환경을 만들었고 이 책에선 이걸 쓸 거야. 상용언어를 쓰자니 공부에 적합하지가 않은데, 언어를 안쓰자니 피아니스트가 피아노를 안치고 피아니스트가 되는 것처럼 말이 안되더라.
+ Racket은 교육용으로 만들었던 건데 잘만들어서 상용화가 됬고, 특히 초심자들이 IDE를 익히는 게 너무 부담스럽기 때문에 이를 위해서 DrRacket을 만들었어. 아무튼 잘만들었고 다른 언어로 확장해나가기도 좋으니까 열심히 해라
  
 ---
 
