--- a/HowToDesginProgram/0_목차.md
+++ b/HowToDesginProgram/0_목차.md
@@ -23,7 +23,7 @@
 ---
 
 - [프롤로그: 어떻게 프로그램하나](./2_프롤로그:_어떻게_프로그램하나.md)
-  - 산수와 산수
+  - [산수와 산수](./2_프롤로그:_어떻게_프로그램하나.md#산수와-산수)
   - 인풋과 아웃풋
   - 다양한 계산 방법들
   - 한 프로그램, 많은 정의
