Update 3_I_고정된 크기의 데이타.md

--- a/HowToDesginProgram/3_I_고정된 크기의 데이타.md
+++ b/HowToDesginProgram/3_I_고정된 크기의 데이타.md
@@ -6,3 +6,18 @@
 
 ### 산수
 
+이전에 BSL 표기법에 대해 설명했었다
+
+```Racket
+1. "("로 시작해서
+2. 오퍼레이터를 넣고
+3. 아규먼츠(operand)를 넣고
+4. ")"로 닫는다
+```
+
+BSL의 연산은 인간친화적인데, 이처럼 연산이 어떻게 이루어지는지 아는 것은 중요하다. 어떤 언어에서 그렇지 않고, 그것을 개발자가 알지 못한다면 문제가 발생하 수 있기 때문이다.
+
+우리는 물리에서처럼 '원자(원자의, 원자성의, 원자적인)'라는 말을 쓴다. 원자는 더이상 분해될 수 없고, 이를 합쳐 새로운 데이터르 만들기도 한다. 새로우 원자를 만들기도 하고...
+
+앞으로 이런 원자적 데이터인 숫자, 문자열, 이미지, 불값등을 다룰 거다.
+
